--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -16,7 +16,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 135%;
+  height: 120%;
   background: url('../../static/img/m3.svg');
   background-size: cover;
 }
@@ -26,7 +26,7 @@
 }
 
 .section {
-  padding: 1rem;
+  /*padding: 1rem;*/
   justify-content: center;
   align-items: center;
   display: flex;
